<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/firstname_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo"
        android:paddingBottom="10dp"
        style="@style/TodoTextTheme"/>

    <TextView
        android:id="@+id/lastname_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo"
        android:paddingBottom="10dp"
        style="@style/TodoTextTheme"/>

    <TextView
        android:id="@+id/telephone_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo"
        android:paddingBottom="10dp"
        style="@style/TodoTextTheme"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/editButton"
            style="@style/EditButtonTheme"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:text="@string/edit"
            android:layout_gravity="start"
            android:onClick="editTodo"
            android:layout_marginRight="80dp"/>


        <Button
            android:id="@+id/deleteButton"
            style="@style/EditButtonTheme"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:text="@string/delete"
            android:onClick="deleteTodo"/>

    </LinearLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

</LinearLayout>